# eddypro_batch_processor

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  coverage.xml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
config/: EddyProProject_template.ini  GL-Dsk_metadata_template.ini  GL-ZaF_dynamic_metadata.ini  GL-ZaF_metadata_template.ini  config.yaml  config.yaml.example  metadata_template.ini
data/: GL-ZaF_ecmd.csv
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  IMPROVEMENT_PLAN.md  KNOWN_ISSUES_AND_TODO.md  METADATA_POPULATION_PLAN.md  OUTPUT_FILE_TRACKING.md  PERFORMANCE_ANALYSIS_DESIGN.md  README.md  REPORTING.md  REPO_HYGIENE_ANALYSIS.md  SCENARIOS.md  USAGE.md  config.md
docs/development/: RUNBOOK.md  agent.md  plan.md  specs.md
docs/plan/: INVESTIGATION_EDDYPRO_EXECUTION_PATH.md  MONITORING_TOGGLE_IMPLEMENTATION_PLAN.md
docs/plan/implemented/: IMPROVEMENT_PLAN.md
examples/: README.md  basic_project.ini  config.yaml  sample_ecmd.csv
specs/001-batch-cli-for/: spec.md
specs/001-batch-cli-for-plan/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-batch-cli-for-plan/contracts/: schemas.json
src/: __init__.py  eddypro_batch_processor.py  provenance.py
src/eddypro_batch_processor/: __init__.py  cli.py  core.py  ecmd.py  ini_tools.py  monitor.py  report.py  scenarios.py  validation.py
tests/: .coverage  test_cli.py  test_cli_functions.py  test_core.py  test_e2e_integration.py  test_ecmd.py  test_eddypro_batch_processor.py  test_ini_tools.py  test_monitor.py  test_provenance.py  test_report.py  test_scenarios.py  test_validation.py
